# rl-hdl

./: .gitignore  README.md  modal_app.py  pyproject.toml
agents/: README.md  __init__.py  loop.py
cologic-verilog/: .dockerignore  .gitignore  Dockerfile.hud  README.md  THIRD_PARTY_NOTICES.md  env.py  grader.py  pyproject.toml  scenario_helpers.py  task_catalog.py  tasks.py
cologic-verilog/tasks/stream_arb_fifo_cocotb_dv/: Makefile  README.md  filelist.f  prompt.md
cologic-verilog/tasks/stream_arb_fifo_cocotb_dv/donotaccess/: bug_catalog.md  grade.py  run_cocotb_hidden.py  stream_arb_fifo_golden.sv
cologic-verilog/tasks/stream_arb_fifo_cocotb_dv/scripts/: check_calibration.py  run_cocotb.py
cologic-verilog/tasks/stream_arb_fifo_formal/: Makefile  README.md  prompt.md
cologic-verilog/tasks/stream_arb_fifo_formal/donotaccess/: bug_catalog.md  grade.py  run_formal_hidden.py
cologic-verilog/tasks/stream_arb_fifo_formal/formal/: stream_arb_fifo_props.sv
cologic-verilog/tasks/stream_arb_fifo_formal/rtl/: stream_arb_fifo.sv
cologic-verilog/tasks/stream_arb_fifo_formal/scripts/: check_calibration.py  run_formal.py
cologic-verilog/tasks/stream_arb_fifo_repair/: Makefile  README.md  filelist.f  prompt.md
cologic-verilog/tasks/stream_arb_fifo_repair/donotaccess/: bug_catalog.md  grade.py  hidden_tb.sv  stream_arb_fifo_golden.sv
cologic-verilog/tasks/stream_arb_fifo_repair/dv/: visible_tb.sv
cologic-verilog/tasks/stream_arb_fifo_repair/rtl/: stream_arb_fifo.sv
cologic-verilog/tasks/stream_arb_fifo_repair/scripts/: check_calibration.py  check_latches.py
(+147 files in other folders)
