[project]
name = "rl-hdl"
version = "0.1.0"
description = "An RLVR environment that teaches LLMs to generate correct Verilog/RTL, graded by real silicon tooling (Verilator)."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
eval = ["openai>=1.0", "modal>=0.64"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cologic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
