[project]
name = "verilog-template"
version = "0.1.0"
description = "HUD v6 chip-design environment (Verilog/SystemVerilog: repair, cocotb DV, formal)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cocotb==2.0.1",
    "cocotb-bus==0.3.0",
    "cocotb-coverage==2.0",
    "hud-python[agents]>=0.6.5",
    "hypothesis==6.152.7",
    "pydantic>=2.0.0",
    "pyuvm==4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "env.py",
    "tasks.py",
    "task_catalog.py",
    "grader.py",
    "scenario_helpers.py",
    "tasks",
]
